<resources>
    <string name="app_name">SimilarTemperature</string>
    <string name="action_settings">Settings</string>
    <string name="main_actionable_string">Search Current Weather</string>
    <string name="main_text_input_hint">"City, Country" or "Zip Code"</string>
    <string name="main_fahrenheit"> °F </string>
    <string name="main_celsius"> °C </string>
    <string name="main_recently_viewed">Recent Queries</string>

    <string name="preferences_first_time_key">"firstTime"</string>
    <!-- OpenWeatherMap / https://home.openweathermap.org/ -->
    <string name="preferences_weather_api_token_key">"weatherApiToken"</string>
    <string name="preferences_weather_api_token_value">"dd2ebe434b8f0efa0ec7bc07bdbe7874"</string>
    <string name="preferences_weather_api_threshold_per_minute_key">"ThresholdPerMinute"</string>
    <string name="preferences_weather_api_threshold_per_minute_value">"60"</string>
    <string name="preferences_weather_api_lax_threshold_value">"18"</string>
    <string name="preferences_weather_temperature_unit_key">"temperatureUnit"</string>
    <string name="preferences_weather_temperature_unit_value">"metric"</string>

    <string name="title_activity_results">Search Results</string>
    <string name="results_heading_string">Places that are also ...</string>
    <string name="title_activity_weather_result_list_adapter">WeatherResultListAdapter</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_settings_temperature_metric">Your preference for temperature</string>
    <string name="summary_settings_temperature_metric">Celsius or Fahrenheit?</string>
    <string name="default_settings_temperature_metric_value">imperial</string>
    <string-array name="settings_temperature_metric_array">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="settings_temperature_metric_array_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="settings_main_category">General</string>

    <string name="title_settings_default_country">What is your default country</string>
    <string name="summary_settings_default_country">Used as the default value for queries when not specified</string>
    <string name="default_settings_default_country_value">United States</string>

    <string name="title_settings_open_weather_api_key">The default api key</string>
    <string name="summary_settings_open_weather_api_key">Don\'t change this without reason</string>
    <string name="default_settings_open_weather_api_key">@string/preferences_weather_api_token_value</string>
    <string-array name="settings_open_weather_api_key_array">
        <item>@string/preferences_weather_api_token_value</item>
    </string-array>

    <string name="title_settings_min_population_criteria">Minimum population amount of cities to include in search</string>
    <string name="summary_settings_min_population_criteria">The minimum population amount of a city to be included in search</string>
    <string name="default_settings_min_population_criteria_value">200000</string>

    <string-array name="results_no_results">
        <item>No matches this time.</item>
        <item>Nada. Search cities are picked randomly, give it another go.</item>
        <item>No results.</item>
    </string-array>

</resources>
